--- a/templates/bingo.html
+++ b/templates/bingo.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>GPN Bingo Break Board</title>
+    <link rel="shortcut icon" href="http://127.0.0.1:5000/favicon.ico" />
     <link href="static/style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body> 
+  <body>
     <div class="bingoBoard">
       <button id="bingo0" class="bingoBox" >
         Do 10 star jumps
@@ -85,7 +86,7 @@
       </button>
     </div>
   </body>
-  
-  
+
+
   <script src="static/script.js"></script>
 </html>
